# aws_apigateway_and_fastapi

./: Makefile  pyproject.toml
.github/workflows/: aws.yml
project/: Dockerfile  Dockerfile.prod  requirements.txt
project/app/: main.py
