[tool.poetry]
name = "aws_apigateway_and_fastapi"
version = "0.1.0"
description = ""
authors = ["k-rea <kitahara@k-rea.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mangum = "^0.12.3"
fastapi = "^0.70.1"
pydantic = "^1.9.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
